# adaptive-analytics-framework

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
adaptive_analytics/: ETL_pipeline_analysis.py  data_pipeline.py  data_processor.py  insights_generator.py  main.py  secrets.toml
adaptive_analytics/dbt_project/: dbt_project.yml
adaptive_analytics/dbt_project/models/: combined_data_model.sql
adaptive_analytics/streamlit/: config.toml
