[tool.poetry]
name = "adaptive-analytics"
version = "0.1.0"
description = "Contextual data analytics framework"
authors = ["Lauren Yoshizuka <https://github.com/Laurenyoshizuka>"]
packages = [{ include = "adaptive_analytics" }] 

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
streamlit = "^1.37.0"
pandas = "^2.0.1"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
statsmodels = "^0.13.5"
plotly = "^5.14.1"
scipy = "^1.10.1"
xlrd = "2.0.1"
et-xmlfile = "^2.0.0"
openpyxl = "^3.1.5"
prefect = "^3.1.15"
prophet = "^1.1.6"
dbt-core = "^1.9.2"
dbt-sqlite = "^1.9.0"
prefect-dbt = "^0.6.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "streamlit run adaptive_analytics.main:main"
